--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-wkxk-vue",
+  "name": "generator-wkxk1-vue1",
   "version": "1.0.0",
   "main": "index.js",
   "author": "",
